[package]
name = "SharedLibDeployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deploy-dll"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
walkdir = "2.5.0"
