[package]
name = "shared_lib_deployer"
version = "1.4.0"
edition = "2021"
authors = ["Joseph <tokinobug@163.com>"]
license = "GPL-3.0-only"
description = "Deploy dlls for your exectuable, useful for redistributing your application as binaries."
readme = "README.md"
homepage = "https://github.com/ToKiNoBug/SharedLibDeployer"
repository = "https://github.com/ToKiNoBug/SharedLibDeployer"
keywords = ["DLL","Windows"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deploy-dll"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
glob = "0.3.1"
walkdir = "2.5.0"
